# NewsInstagramPosts

./: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
config/: brand.yaml
config/templates/: breaking_news.yaml  carousel_slide.yaml  engagement_bait.yaml  quote_card.yaml  reel_cover.yaml  video_reel.yaml
scripts/: generate_overlays.py
src/: cli.py
src/exporter/: dropbox_exporter.py
src/renderer/: ffmpeg_engine.py  filtergraph.py  image_renderer.py  video_renderer.py
src/templates/: loader.py  validator.py
src/utils/: color.py  font_validator.py  slug.py  story_loader.py  text_escaper.py
stories/: sample_engagement.json  sample_quote.json  sample_story.json
tests/: test_config_validator.py  test_filtergraph.py  test_slug.py  test_text_escaper.py
