[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-beltway"
version = "1.0.0"
description = "Template-driven Instagram graphics system for Daily Beltway political news brand"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "python-slugify>=8.0,<9.0",
    "dropbox>=11.36,<13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9.0"]

[project.scripts]
daily-beltway = "src.cli:cli"

[tool.setuptools]
packages = ["src", "src.renderer", "src.templates", "src.exporter", "src.utils"]
